# rust_react_boilerplate

./: .gitignore  CONFIG.md  Cargo.toml
backend/: main.rs  schema.rs
backend/extractors/: mod.rs
backend/mail/: mod.rs
backend/models/: mod.rs  profile.rs  user.rs
backend/services/: auth.rs  mod.rs  profile_service.rs
frontend/: package.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/containers/: AccountPage.tsx  LoginPage.tsx  RegistrationPage.tsx
frontend/src/hooks/: useProfile.tsx
frontend/src/types/: rust.d.ts
migrations/00000000000000_diesel_initial_setup/: down.sql
migrations/00000000000003_plugin_auth/: down.sql  up.sql
migrations/00000000000004_profiles/: down.sql  up.sql
